# heif

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.TXT  LICENSE.txt  README.md  comparison.html  examples.html  index.html  license.txt  news.html  technical.html
Docs/: CMakeLists.txt  Doxyfile.in
Docs/JavaScript/jsdoc/: HEIFReader-FileInfo.html  HEIFReader.html  HevcDecoder.html  ImageProvider-Payload.html  ImageProvider-RequestContext.html  ImageProvider.html  heif-reader.js.html  hevc-decoder.js.html  image-provider.js.html  index.html
Srcs/: CMakeLists.txt
Srcs/buildinfo/: buildinfo.hpp.in
Srcs/common/: CMakeLists.txt  androidhacks.hpp  auxiliarytypeproperty.cpp  auxiliarytypeproperty.hpp  avccommondefs.hpp  avcconfigurationbox.cpp  avcconfigurationbox.hpp  avcdecoderconfigrecord.cpp  avcdecoderconfigrecord.hpp  avcsampleentry.cpp  avcsampleentry.hpp  bbox.cpp  bbox.hpp  bitstream.cpp  bitstream.hpp  chunkoffsetbox.cpp  chunkoffsetbox.hpp  cleanaperture.cpp  cleanaperture.hpp  codingconstraintsbox.cpp  codingconstraintsbox.hpp  commondefs.hpp  compositionoffsetbox.cpp  compositionoffsetbox.hpp  compositiontodecodebox.cpp  compositiontodecodebox.hpp  datainformationbox.cpp  datainformationbox.hpp  datareferencebox.cpp  datareferencebox.hpp  decodepts.cpp  decodepts.hpp  editbox.cpp  editbox.hpp  entitytogroupbox.cpp  entitytogroupbox.hpp  filetypebox.cpp  filetypebox.hpp  fourccint.cpp  fourccint.hpp  (+106 more)
Srcs/examples/: CMakeLists.txt  example.cpp
Srcs/heiftojpeg/: CMakeLists.txt  heiftojpeg.cpp
Srcs/jsonlib/: CMakeLists.txt  json-forwards.hh  json.cc  json.hh  jsoncpp.cpp
Srcs/parser/: CMakeLists.txt  h265parser.cpp  h265parser.hpp  parserfactory.hpp  parserinterface.hpp
Srcs/parser/avcparser/: CMakeLists.txt  avcparser.cpp  avcparser.hpp
Srcs/parser/h265parser/: CMakeLists.txt  h265parser.cpp  h265parser.hpp
Srcs/reader/: CMakeLists.txt  hevcimagefilereader.cpp  hevcimagefilereader.hpp  imagefilereaderfactory.cpp  imagefilereaderfactory.hpp  imagefilereaderinterface.hpp
Srcs/readerapp/: CMakeLists.txt
Srcs/writer/: CMakeLists.txt  auxiliaryimagewriter.cpp  auxiliaryimagewriter.hpp  context.cpp  context.hpp  datastore.cpp  datastore.hpp  deriveditemmediawriter.cpp  deriveditemmediawriter.hpp  editwriter.cpp  editwriter.hpp  entitygroupwriter.cpp  entitygroupwriter.hpp  filemaker.cpp  filemaker.hpp  filewriter.cpp  filewriter.hpp  ftypwriter.cpp  ftypwriter.hpp  imagemasterwriter.cpp  imagemasterwriter.hpp  imagemediawriter.cpp  imagemediawriter.hpp  imagethumbswriter.cpp  imagethumbswriter.hpp  isomediafile.hpp  layerimagewriter.cpp  layerimagewriter.hpp  mediawriter.hpp  metaboxwriter.cpp  metaboxwriter.hpp  metadatamediawriter.cpp  metadatamediawriter.hpp  metadatawriter.cpp  metadatawriter.hpp  metaderivedimagewriter.cpp  metaderivedimagewriter.hpp  metapropertywriter.cpp  metapropertywriter.hpp  metawriter.cpp  (+28 more)
Srcs/writerapp/: CMakeLists.txt  main.cpp  writerapp.cpp  writerapp.hpp  writercfg.cpp  writercfg.hpp
docs/: CMakeLists.txt  Doxyfile.in  toc.h
srcs/: .clang-format  CMakeLists.txt
srcs/api-cpp/: AACDecoderConfiguration.cpp  AACDecoderConfiguration.h  AVCCodedImageItem.cpp  AVCCodedImageItem.h  AVCDecoderConfiguration.cpp  AVCDecoderConfiguration.h  AlternativeTrackGroup.cpp  AlternativeTrackGroup.h  AudioSample.cpp  AudioSample.h  AudioTrack.cpp  AudioTrack.h  CMakeLists.txt  CodedImageItem.cpp  CodedImageItem.h  DecoderConfiguration.cpp  DecoderConfiguration.h  DerivedImageItem.cpp  DerivedImageItem.h  DescriptiveProperty.cpp  DescriptiveProperty.h  EntityGroup.cpp  EntityGroup.h  EqivGroup.cpp  EqivGroup.h  ErrorCodes.cpp  ErrorCodes.h  ExifItem.cpp  ExifItem.h  GridImageItem.cpp  GridImageItem.h  H26xTools.cpp  H26xTools.h  HEVCCodedImageItem.cpp  HEVCCodedImageItem.h  HEVCDecoderConfiguration.cpp  HEVCDecoderConfiguration.h  Heif.cpp  Heif.h  IdentityImageItem.cpp  (+37 more)
srcs/api-java/cpp/: AACDecoderConfigJNI.cpp  AACSampleJNI.cpp  AVCDecoderConfigJNI.cpp  AVCImageItemJNI.cpp  AVCSampleJNI.cpp  AlternateGroupJNI.cpp  AlternativeTrackGroupJNI.cpp  AudioTrackJNI.cpp  AuxiliaryPropertyJNI.cpp  CMakeLists.txt  CleanAperturePropertyJNI.cpp  HEIFJNI.cpp  (+40 more)
srcs/buildinfo/: buildinfo.hpp.in
srcs/common/: CMakeLists.txt  accessibilitytext.cpp  accessibilitytext.hpp  arraydatatype.cpp  audiosampleentrybox.cpp  audiosampleentrybox.hpp  auxiliarytypeinfobox.cpp  auxiliarytypeinfobox.hpp  auxiliarytypeproperty.cpp  auxiliarytypeproperty.hpp  avccommondefs.hpp  avcconfigurationbox.cpp  avcconfigurationbox.hpp  avcdecoderconfigrecord.cpp  avcdecoderconfigrecord.hpp  avcparser.cpp  avcparser.hpp  avcsampleentry.cpp  avcsampleentry.hpp  bbox.cpp  bbox.hpp  bitstream.cpp  bitstream.hpp  boxfactory.cpp  boxfactory.hpp  brandandcompatiblebrandsbasebox.cpp  brandandcompatiblebrandsbasebox.hpp  channellayoutbox.cpp  channellayoutbox.hpp  chunkoffsetbox.cpp  chunkoffsetbox.hpp  cleanaperturebox.cpp  cleanaperturebox.hpp  codingconstraintsbox.cpp  codingconstraintsbox.hpp  colourinformationbox.cpp  colourinformationbox.hpp  commontypes.hpp  compositionoffsetbox.cpp  compositionoffsetbox.hpp  (+223 more)
srcs/examples/: CMakeLists.txt  example.cpp
srcs/extlibs/: 0001-VTM-changes.patch  vtm.cmake
srcs/reader/: CMakeLists.txt  heiffiledatatypesinternal.hpp  heifreaderaccessors.cpp  heifreaderimpl.cpp  heifreaderimpl.hpp  heifreadersegment.cpp  heifreadersegment.hpp  heifstreamfile.cpp  heifstreamfile.hpp  heifstreamgeneric.cpp  heifstreamgeneric.hpp  heifstreaminterface.cpp  heifstreaminternal.cpp  heifstreaminternal.hpp  heifstreamlinux.cpp  heifstreamlinux.hpp
srcs/vvc-parser/: CMakeLists.txt  vvcparser.cpp  vvcparser.hpp
srcs/writer/: CMakeLists.txt  FileOutputStream_std.cpp  FileOutputStream_win32.cpp  fileoutputstream.hpp  fileoutputstream_std.cpp  fileoutputstream_win32.cpp  idgenerators.cpp  idgenerators.hpp  miafchecker.cpp  miafchecker.hpp  refsgroup.cpp  refsgroup.hpp  samplegroup.cpp  samplegroup.hpp  timeutility.cpp  timeutility.hpp  writerconstants.hpp  writerdatatypesinternal.hpp  writerimpl.cpp  writerimpl.hpp  writermetaimpl.cpp  writermoovimpl.cpp
(+142 files in other folders)
